tests/neg-custom-args/captures/linear-buffer.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/linear-buffer.scala:7:29 ---------------------------------
7 |    def bar: BadBuffer[T]^ = this // error
  |                             ^^^^
  |       Found:    BadBuffer[T]^{BadBuffer.this.rd}
  |       Required: BadBuffer[T]^
  |
  |       Note that capability BadBuffer.this.rd is not included in capture set {}.
  |
  |       Note that {cap} is an exclusive capture set of the mutable type BadBuffer[T]^,
  |       it cannot subsume a read-only capture set of the mutable type BadBuffer[T]^{BadBuffer.this.rd}.
  |
  |       where:    ^ and cap refer to a fresh root capability classified as Mutable in the result type of method bar
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:5:27 ------------------------------------------------------
5 |  update def append(x: T): BadBuffer[T]^ = this // error
  |                           ^^^^^^^^^^^^^
  |      Separation failure: method append's result type BadBuffer[T]^ hides non-local this of class class BadBuffer.
  |      The access must be in a consume method to allow this.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:10:29 -----------------------------------------------------
10 |    def bar: BadBuffer[T]^ = this // error // error
   |                             ^^^^
   |         Separation failure: Illegal access to {BadBuffer.this} which is hidden by the previous definition
   |         of method append with result type BadBuffer[T]^.
   |         This type hides capabilities  {BadBuffer.this}
   |
   |         where:    ^ refers to a fresh root capability classified as Mutable in the result type of method append
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:10:13 -----------------------------------------------------
10 |    def bar: BadBuffer[T]^ = this // error // error
   |             ^^^^^^^^^^^^^
   |       Separation failure: method bar's result type BadBuffer[T]^ hides non-local this of class class BadBuffer.
   |       The access must be in a consume method to allow this.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:22:17 -----------------------------------------------------
22 |  val buf3 = app(buf, 3) // error
   |                 ^^^
   |                Separation failure: Illegal access to (buf : Buffer[Int]^), which was passed to a
   |                consume parameter or was used as a prefix to a consume method on line 20
   |                and therefore is no longer available.
   |
   |                where:    ^ refers to a fresh root capability classified as Mutable in the type of parameter buf
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:29:17 -----------------------------------------------------
29 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |                 consume parameter or was used as a prefix to a consume method on line 27
   |                 and therefore is no longer available.
   |
   |                 where:    ^ refers to a fresh root capability classified as Mutable in the type of value buf1
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:37:17 -----------------------------------------------------
37 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |                 consume parameter or was used as a prefix to a consume method on line 34
   |                 and therefore is no longer available.
   |
   |                 where:    ^ refers to a fresh root capability classified as Mutable in the type of value buf1
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:47:17 -----------------------------------------------------
47 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |                 consume parameter or was used as a prefix to a consume method on line 42
   |                 and therefore is no longer available.
   |
   |                 where:    ^ refers to a fresh root capability classified as Mutable in the type of value buf1
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:51:8 ------------------------------------------------------
51 |    app(buf, 1)  // error
   |        ^^^
   |        Separation failure: (buf : Buffer[Int]^) appears in a loop, therefore it cannot
   |        be passed to a consume parameter or be used as a prefix of a consume method call.
   |
   |        where:    ^ refers to a fresh root capability classified as Mutable in the type of parameter buf
